--- a/src/index.scss
+++ b/src/index.scss
@@ -1,9 +1,3 @@
-$background: #242424;
-
-$negative-color: rgb(198, 10, 10);
-$positive-color: rgb(20, 206, 20);
-
-// base settings and lightweight CSS reset
 :root {
   color-scheme: dark;
 }
@@ -17,12 +11,10 @@ $positive-color: rgb(20, 206, 20);
 
 html,
 body {
-  background-color: $background;
   padding: 0;
   margin: 0;
-  background-color: $background;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
+    Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 h1,
